<resources>
    <string name="app_name">elainhelp</string>
    <string name="menu_kieli">Kieli</string>
    <string name="menu_teema">Teema</string>
    <string name="menu_tietosuoja">Tietosuojakäytänteet</string>
    <string name="menu_aloitus">Aloitusnäyttöön</string>
    <string name="main_info">Sovellus, joka auttaa lemmikkien omistajia. Apista löytää apua arkeen lemmikkien kanssa hädässä ja jokapäiväisissä tapahtumissa.</string>
    <string name="menu_gp_lelut">Aktivointi ja lelut</string>
    <string name="menu_gp_asuminen">Marsujen asuminen</string>
    <string name="menu_gp_otsikko">Marsut</string>
    <string name="menu_gp_kynnet">Kynsien leikkaaminen</string>
    <string name="menu_gp_ruoka">Ruokinta</string>
    <string name="menu_gp_valikko">Valikko</string>
    <string name="gp_toys_info">Marsut rakastavat nakertamisesta, sillä ne ovat jyrsijöitä. Puiden oksat tai muut puusta valmistetut lelut ovat yleensä marsujen mieleen, sillä niitä saa nakertaa ja ne tarjoavat sopivasti haastetta hampaiden kuluttamiseen. Jyrsijöiden luontaiseen vaistoon kuuluu etsiä ruokaa haistellen ja kaivaen maasta. Marsuille voi tarjota erilaisia älypelejä, esimerkiksi herkun voi piilottaa vaikka nukkamattoon, jolloin marsu saa haistelemalla etsiä sen ja käyttää älynystyröitään herkun saamiseksi. On myös olemassa jyrsijöille tarkoitettuja pyöritettäviä palloja, joiden sisälle voi laittaa nameja ja marsu saa työntämällä sitä ne ulos.</string>
    <string name="gp_lelut_otsikko">Aktivointi ja lelut</string>
    <string name="gp_kynnet_otsikko">Kynsien leikkaaminen</string>
    <string name="gp_kynnet_info">Marsujen kynnet voi leikata joko jyrsijöille tarkoitetuilla kynsisaksilla tai esim. kissojen tai pienien koirien kynsisaksilla. Kynnet olisi hyvä leikata pääsääntöisesti n. kahden viikon välein, aikaväli on kuitenkin yksilöllinen. Siihen voi vaikuttaa esimerkiksi marsun ikä, sillä vanhemmilla marsuilla kynnet kasvavat hitaammin. Marsun kynnen sisällä kulkee verisuoni, jota kutsutaan verikynneksi. Sitä tulee varoa kynsiä leikatessa, sillä se on herkkä kohta ja marsuun sattuu, jos sen päältä vahingossa leikkaa. Paras tapa on leikata kynsiä suhteellisen useasti ja vähän kerrallaan.</string>
    <string name="gp_asuminen_info">Häkkivaihtoehtoja on monenlaisia. Markkinoilla on myynnissä suoraan marsuille tarkoitettuja häkkejä, joissa on muovipohja sekä metallinen yläosa. Häkki voi kuitenkin olla myös erilainen - esimerkiksi rakennettu vain lattialle metallikehikosta ja jonkinnäköisestä alustasta. Häkissä kuuluu olla piilopaikkoja, virikkeitä, juomapullo, heinäteline, pellettikuppeja sekä vessa-astioita tai purupohja. Itse kasattuun häkkiin voi olla hankalaa tehdä purupohjaa, joten silloin lattialle voi asettaa esimerkiksi vilttejä pehmusteeksi. Piilopaikkoja ovat esimerkiksi pesämökit, jonne marsut voivat mennä nukkumaan tai piiloon.</string>
    <string name="gp_asuminen_otsikko">Marsujen asuminen</string>
    <string name="gp_ruoka_info">Marsujen pääsääntöinen ruokavalio koostuu heinästä, vedestä ja pelletistä. Lisäksi marsuille voi antaa tuoreita kasviksia, kuten salaattia, tomaattia, kurkkua, paprikaa, persiljaa jne. Ruuan lisäksi toinen elintärkeä ehto marsuille on c-vitamiinin saanti, sillä ne eivät voi tuottaa sitä itse. Erilaisia c-vitamiinijauheita myydään markkinoilla, ja niitä annetaan marsuille esimerkiksi kurkun päälle sirotettuna päivittäin. Marsut ovat kasvissyöjiä, joten kaikki eläinperäinen on vaarallista niille.</string>
    <string name="gp_ruoka_otsikko">Ruokinta</string>
    <string name="menu_dog_valikko">Valikko</string>
    <string name="menu_dog_turkki">Turkki ja hoito</string>
    <string name="menu_dog_koulutus">Koulutus ja sosiaalisuus</string>
    <string name="menu_dog_liikunta">Liikunta</string>
    <string name="menu_dog_ruokinta">Ruokinta</string>
    <string name="menu_dog_otsikko">Koirat</string>
    <string name="dog_liikunta_info">Säännöllinen liikunta on tärkeää koiran fyysiselle terveydelle, stimulaatiolle ja käyttäytymisongelmien ehkäisemiselle. Tarvittava määrä riippuu koiran iästä, rodusta ja aktiivisuustasosta. Yleensä useimmat koirat tarvitsevat vähintään 30 min-1h liikuntaa päivässä, mutta jotkut rodut voivat vaatia enemmänkin. Harjoittelu voi olla monentyyppistä, esim. kävelyä, juoksemista, noutamista, uimista tai vaellusta. Liikunta ei ainoastaan auta koiria pysymään fyysisesti kunnossa, vaan myös edistää hyvää käyttäytymistä vähentämällä stressiä, ahdistusta ja paikkojen tuhoamista. Huomionarvoista on, että koiraa ei saa harjoittaa liikaa etenkään kuumalla tai kostealla säällä, sillä ne ovat alttiita lämpöhalvaukselle. Varmista aina, että koirallasi on runsaasti vettä, ja pidä usein taukoja harjoitusten aikana</string>
    <string name="dog_liikunta_otsikko">Liikunta</string>
    <string name="dog_ruoka_info">Koirat tarvitsevat tasapainoisen ruokavalion, joka sisältää sekä eläin- sekä kasviperäisiä ruokia. Proteiini on tärkeää: Koirat tarvitsevat laadukkaan proteiinin lähteen ruokavaliossaan ylläpitääkseen lihaksia ja terveitä kudoksia. Hyviä proteiinin lähteitä koirille ovat liha, kala, kananmunat ja jotkin kasvikset. Hiilihydraatit ovat myös tärkeitä, ja hyviä hiilihydraattilähteitä koirille ovat viljat, vihannekset ja hedelmät. Hyviä rasvanlähteitä koirille ovat eläinrasvat, kuten liha- ja maitotuotteet, sekä kasviperäiset rasvat, kuten pähkinöiden ja siementen rasvat. Koirat tarvitsevat erilaisia vitamiineja ja kivennäisaineita hyvän terveyden ylläpitämiseksi. Nämä voivat tulla luonnostaan tasapainoisen ruokavalion kautta, mutta joissakin tapauksissa lisäravinteet voivat olla tarpeen.</string>
    <string name="dog_ruoka_otsikko">Ruokinta</string>
    <string name="dog_turkki_otsikko">Turkki ja hoito</string>
    <string name="dog_turkki_info">Hoitoon kuuluu turkin harjaaminen, kynsien leikkaaminen, korvien puhdistaminen, hammashoito ja tarvittaessa kylvyt. Turkin säännöllinen hoito sekä korvien puhdistaminen ovat tärkeitä, sillä ne ehkäisevät ihoinfektioita.Käytä koirakohtaista korvanpuhdistusainetta ja vältä pumpulipuikkojen käyttöä. Rodusta ja koiran turkin pituudesta riippuen saatat joutua hoitamaan turkkia joka päivä, muutaman päivän välein tai kerran viikossa. Harjaaminen poistaa turkista likaa, kuolleita karvoja ja takkuja. Käytä koirasi turkkityypille sopivaa harjaa. Pesulla käytä koiralle tarkoitettua shampoota ja huuhtele koirasi huolellisesti. Kynsien leikkaaminen on tärkeää, jotta kynnet eivät kasvaisi liian pitkiksi, sillä ne aiheuttavat terveysongelmia ja epämukavuutta.</string>
    <string name="dog_koulutus_otsikko">Koulutus ja sosiaalisuus</string>
    <string name="dog_koulutus_info">Koulutus ja sosialisointi ovat välttämättömiä, jotta koira olisi onnellinen. Koulutukseen kuuluu hyvän käytöksen opettaminen sekä sosialisointimahdollisuuksien tarjoaminen. Pennut ovat vastaanottavaisempia uusille kokemuksille ja oppimiselle 3–14 viikon iässä, joten on tärkeää aloittaa koulutus jo pentuna. Käytä positiivisia vahvistustekniikoita, kuten herkkuja, kehuja ja leikkimistä palkitsemaan hyvästä käytöksestä. Käytä joka kerta samoja komentoja ja palkitsemisjärjestelmää, jotta koirasi tietää, mitä siltä odotetaan. Vie koiraa puistoihin, pentutunneille ja muihin sosiaalisiin tilanteisiin. Tämä auttaa koiraa oppimaan vuorovaikusta muiden koirien ja ihmisten kanssa.Koulutus ja sosiaalistaminen vievät aikaa, ja jokainen koira oppii omaan tahtiinsa. Älä turhaudu, jos koira ei opi jotain heti.</string>
    <string name="menu_cat_valikko">Valikko</string>
    <string name="menu_cat_ymparisto">Ympäristö</string>
    <string name="menu_cat_liikunta">Liikunta</string>
    <string name="menu_cat_turkki">Turkki ja hoito</string>
    <string name="menu_cat_ravitsemus">Ravitsemus</string>
    <string name="menu_cat_otsikko">Kissat</string>
    <string name="cat_ruoka_info">Tasapainoisen ja ravitsevan ruokavalion tarjoaminen on välttämätöntä kissan terveyden ja hyvinvoinnin kannalta. Kissat ovat lihansyöjiä, minkä vuoksi ne tarvitsevat runsaasti eläinperäistä proteiinia sisältävää ravintoa. Rasvat ovat myös tärkeitä energianlähteitä, jotka tarjoavat kissoille välttämättömiä rasvahappoja. Kissat tarvitsevat ruokavaliossaan tiettyjä vitamiineja ja kivennäisaineita terveyden ylläpitämiseksi. Näitä ovat seuraavat: A, D, E, K, B-vitamiinit, kalsium, fosfori, magnesium ja kalium. Ruokintaa suositellaan 2–4 kertaa päivässä aikuisille kissoille, ja kissanpennuille vielä useammin.</string>
    <string name="cat_ruoka_otsikko">Ravitsemus</string>
    <string name="cat_liikunta_otsikko">Liikunta</string>
    <string name="cat_liikunta_info">Kissat tarvitsevat säännöllistä liikuntaa edistämään yleistä hyvinvointia. Sisäkissat eivät pääse liikkumaan ulkotiloihin, mutta ne tarvitsevat silti liikuntaa. Leluilla leikkiminen, kiipeilypuissa kiipeäminen ja älypelit ovat hyviä pitämään sisäkissat aktiivisina. Kissan tarvitseman liikunnan tyyppi ja määrä riippuvat sen iästä, yleisestä terveydestä ja aktiivisuustasosta. Vanhemmat ja terveysongelmaiset kissat tarvitsevat vähemmän intensiivistä liikuntaa. Kissat noudattavat todennäköisemmin liikuntarutiinia, jos se on hauskaa ja kiinnostavaa. Virikkeiden ja herkkujen lisääminen voi tehdä liikunnasta mielekkäämpää.</string>
    <string name="cat_turkki_otsikko">Turkki ja hoito</string>
    <string name="cat_turkki_info">Säännöllinen hoito on tärkeää kissan turkille, ihon terveydelle ja yleiselle hygienialle. Harjaaminen auttaa poistamaan ylimääräiset karvat, ehkäisee takkuisuuta sekä levittää luonnollisia öljyjä. Pitkäkarvaiset kissat tulee harjata päivittäin, kun taas lyhytkarvaiset kissat voidaan harjata kerran tai kahdesti viikossa. Kissan kynsien leikkaaminen voi estää niitä naarmuttamasta huonekaluja. Käytä erityistä kissan kynsileikkuria ja varo leikkaamasta verikynttä. Useimmat kissat hoitavat itsensä eivätkä tarvitse toistuvia kylpyjä, mutta jos kissasi on likainen tai haisee, kylpy voi olla tarpeen. Käytä kissoille niille tarkoitettua kissashampoota ja huuhtele huolellisesti. </string>
    <string name="cat_ymparisto_otsikko">Ympäristö</string>
    <string name="cat_ymparisto_info">Turvallisen ja kannustavan ympäristön luominen kissallesi on tärkeää. Ne ovat uteliaita ja rakastavat tutkimista, joten varmista, että niiden ympäristö on turvallinen ja tarpeeksi suuri. Kissoilla on vaisto raapimiseen, joten kissoille on hyvä tarjota esim. raapimispuu. Tämä auttaa myös ehkäisemään huonekalujen raapimista. Kissoille täytyy tarjota leikkiaikaa ja leluja, sillä ne auttavat pitämään kissat aktiivisina ja ehkäisemään tylsistyneisyyttä. Kissat ovat puhtaita eläimiä ja tarvitsevat kissanhiekkalaatikon joka on helposti saatavilla.</string>
    <string name="stop">Pysäytä</string>
    <string name="kuikutus">Kuikutus</string>
    <string name="viha">Viha</string>
    <string name="juttelu">Juttelu</string>
    <string name="pelko">Pelko</string>
    <string name="haukkuminen">Haukkuminen</string>
    <string name="vinkuminen">Vinkuminen</string>
    <string name="ulvominen">Ulvominen</string>
    <string name="dog_viha">Viha</string>
    <string name="dog_stop">Pysäytä</string>
    <string name="cat_stop">Pysäytä</string>
    <string name="muriseminen">Muriseminen</string>
    <string name="maukuminen">Maukuminen</string>
    <string name="kehrays">Kehrääminen</string>
    <string name="sahina">Sähiseminen</string>
    <string name="termsTv">Tietosuojakäyntäntö</string>
    <string name="termsPoliciesTv">EläinHelppi ei vaadi rekisteröitymistä, eikä se kerää henkilötietoja. EläinHelppi ei käytä asiakkaiden sijaintia muihin tarkoituksiin, kuin paikallistamaan lähimmät eläinlääkäriasemat. EläinHelppi sitoutuu käsittelemään paikallistamisominaisuuksia huolellisesti ja tietoturvallisesti tietosuojalainsäädännön mukaisesti. EläinHelppi sitoutuu päivittämään sovellukseen ajantasaiset tietoturvapäivitykset.</string>
</resources>